--- a/style/components/reset.scss
+++ b/style/components/reset.scss
@@ -272,6 +272,7 @@ $button-color: #fff;
   background: #222;
   height: 50px;
   display: none;
+  z-index: 100;
   &.opened {
     span {
       &:before, &:after {
