--- a/style/components/woo.scss
+++ b/style/components/woo.scss
@@ -192,6 +192,21 @@
       border: 1px solid #ccc;
       padding: 15px;
       margin-bottom: 40px;
+      position: relative;
+      .woocommerce-product-gallery__trigger {
+        font-size: 0;
+        position: absolute;
+        right: 20px;
+        top: 15px;
+        z-index: 1;
+        &:before {
+          content: "\f00e";
+          font-family: FontAwesome;
+          display: inline-block;
+          color: $bg;
+          font-size: 25px;
+        }
+      }
       .flex-viewport {
         margin-bottom: 10px;
         img {
